--- a/android/Tracker/app/src/main/res/layout/activity_main.xml
+++ b/android/Tracker/app/src/main/res/layout/activity_main.xml
@@ -139,6 +139,7 @@
 
     <Button
         android:id="@+id/buttonStart"
+        android:onClick="sendCoords"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start"
