--- a/android/Tracker/app/src/main/res/layout/sample_activity.xml
+++ b/android/Tracker/app/src/main/res/layout/sample_activity.xml
@@ -100,7 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start"
-        android:onClick="sendBack"
+        android:onClick="startSending"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.125"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -113,6 +113,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Stop"
+        android:onClick="stopSending"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.847"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -121,17 +122,20 @@
         app:layout_constraintVertical_bias="0.46" />
 
     <LinearLayout
-        android:layout_width="379dp"
-        android:layout_height="177dp"
-        android:orientation="horizontal"
-        app:layout_constraintHorizontal_bias="0.6"
+        android:id="@+id/llLog"
+        android:layout_width="342dp"
+        android:layout_height="172dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.795"></LinearLayout>
+        app:layout_constraintVertical_bias="0.818"
+        tools:layout_editor_absoluteX="42dp"
+        tools:layout_editor_absoluteY="273dp"></LinearLayout>
 
     <Button
         android:id="@+id/btExit"
