--- a/android/Tracker/app/src/main/res/layout/sample_activity.xml
+++ b/android/Tracker/app/src/main/res/layout/sample_activity.xml
@@ -121,22 +121,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.46" />
 
-    <LinearLayout
-        android:id="@+id/llLog"
-        android:layout_width="342dp"
-        android:layout_height="172dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.818"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="273dp"></LinearLayout>
-
     <Button
         android:id="@+id/btExit"
         android:layout_width="wrap_content"
@@ -148,6 +132,37 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.991" />
+
+    <ScrollView
+        android:layout_width="322dp"
+        android:layout_height="173dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintVertical_bias="0.819"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.789">
+
+        <LinearLayout
+            android:id="@+id/llLog"
+            android:layout_width="342dp"
+            android:layout_height="172dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.818"
+            tools:layout_editor_absoluteX="42dp"
+            tools:layout_editor_absoluteY="273dp"></LinearLayout>
+    </ScrollView>
 
 
 </android.support.constraint.ConstraintLayout>
