--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,8 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.096" />
+        app:layout_constraintVertical_bias="0.096"
+        app:layout_constraintHorizontal_bias="0.057" />
 
     <Button
         android:id="@+id/stopButton"
@@ -44,7 +45,8 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintVertical_bias="0.827" />
+        app:layout_constraintVertical_bias="0.096"
+        app:layout_constraintHorizontal_bias="0.945" />
 
     <ImageView
         android:id="@+id/pic"
