--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,18 +61,34 @@
         app:layout_constraintVertical_bias="0.476"
         app:srcCompat="@android:color/white" />
 
-    <LinearLayout
-        android:id="@+id/llLog"
-        android:layout_width="375dp"
-        android:layout_height="166dp"
-        android:orientation="horizontal"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
+    <ScrollView
+        android:layout_width="302dp"
+        android:layout_height="177dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.975"></LinearLayout>
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.394"
+        tools:layout_editor_absoluteX="45dp">
+
+        <LinearLayout
+            android:id="@+id/llLog"
+            android:layout_width="375dp"
+            android:layout_height="166dp"
+            android:orientation="vertical"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.555"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.975"></LinearLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
