--- a/web/app/views/dashboard/_dates.html.haml
+++ b/web/app/views/dashboard/_dates.html.haml
@@ -4,7 +4,7 @@
       = link_to "GPS Tracker",
         root_path(), method: :get
   .content.col-md-9.col-xs-9
-    %table.table
+    %table.table.table-bordered
       %tr
         - m = ""
         - n = ""
