--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -5,28 +5,27 @@
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+
   %body
-    #nav
-      .content.col-md-2.col-xs-2
+    %nav.navbar.navbar-default
+      %ul.nav.navbar-nav
+        %li
+          = link_to "GPS Tracker",
+            root_path(), method: :get
+
         - if current_user
-          %table.table.table-bordered
-            %tr
-              %th
-                = link_to "Edit Profile", edit_user_path(current_user.id)
-            %tr
-              %th
-                = link_to "Logout", :logout, method: :post
-            %tr
-              %th
-                = link_to "All users", users_path
+          %li
+            = link_to "Edit Profile", edit_user_path(current_user.id)
+          %li
+            = link_to "Logout", :logout, method: :post
+          %li
+            = link_to "All users", users_path
+
         - else
-          %table.table.table-bordered
-            %tr
-              %th
-                = link_to "Login", :login
-            %tr
-              %th
-                = link_to "Register", new_user_path
+          %li
+            = link_to "Register", new_user_path
+          %li
+            = link_to "Login", :login
 
     %div
       %p#notice= flash[:notice]
