--- a/web/app/views/users/_form.html.haml
+++ b/web/app/views/users/_form.html.haml
@@ -7,17 +7,22 @@
       %ul
         - user.errors.full_messages.each do |message|
           %li= message
-  .field
-    = form.label :email
-    %br/
-    = form.password_field :email
-  .field
-    = form.label :password
-    %br/
-    = form.password_field :password
-  .field
-    = form.label :password_confirmation
-    %br/
-    = form.password_field :password_confirmation
-  .actions
-    = form.submit
+
+  .panel.panel-success{:align => "center"}
+    .panel-body
+      .h1 New user
+    .panel-footer
+      .field
+        = form.label :email
+        %br/
+        = form.email_field :email
+      .field
+        = form.label :password
+        %br/
+        = form.password_field :password
+      .field
+        = form.label :password_confirmation
+        %br/
+        = form.password_field :password_confirmation
+      .actions
+        = form.submit
