--- a/web/app/assets/stylesheets/scaffolds.scss
+++ b/web/app/assets/stylesheets/scaffolds.scss
@@ -23,12 +23,12 @@ a {
   color: #000;
 
   &:visited {
-    color: #7041f4;
+    color: #fff;
   }
 
   &:hover {
     color: #fff;
-    background-color: #7041f4;
+    background-color: #fff;
   }
 }
 
