--- a/web/app/views/users/_form.html.haml
+++ b/web/app/views/users/_form.html.haml
@@ -8,21 +8,23 @@
         - user.errors.full_messages.each do |message|
           %li= message
 
-  .panel.panel-success{:align => "center"}
-    .panel-body
-      .h1 New user
-    .panel-footer
-      .field
-        = form.label :email
-        %br/
-        = form.email_field :email
-      .field
-        = form.label :password
-        %br/
-        = form.password_field :password
-      .field
-        = form.label :password_confirmation
-        %br/
-        = form.password_field :password_confirmation
-      .actions
-        = form.submit
+  .row
+    .content.col-md-4.col-md-offset-4
+      .panel.panel-primary{:align => "center"}
+        .panel-heading
+          .h1=@act
+        .panel-body
+          .field
+            = form.label :email
+            %br/
+            = form.email_field :email
+          .field
+            = form.label :password
+            %br/
+            = form.password_field :password
+          .field
+            = form.label :password_confirmation
+            %br/
+            = form.password_field :password_confirmation
+          .actions
+            = form.submit
