--- a/web/app/assets/stylesheets/scaffolds.scss
+++ b/web/app/assets/stylesheets/scaffolds.scss
@@ -23,11 +23,11 @@ a {
   color: #000;
 
   &:visited {
-    color: #fff;
+    color: #000;
   }
 
   &:hover {
-    color: #fff;
+    color: #000;
     background-color: #fff;
   }
 }
