--- a/web/app/views/dashboard/index.html.haml
+++ b/web/app/views/dashboard/index.html.haml
@@ -1,4 +1,11 @@
 #main-container.container-fluid{data: {way: @today.to_json}}
   .row
-    %h1{:align => "center"}
-      #number
+    .content.col-md-6.col-md-offset-3
+      .jumbotron
+        %h1{:align => "center"} GPS Tracker
+        %p{:align => "center"} This project allows you to track yourself!
+  -if @anyuser
+    .row
+      .content.col-md-12
+        %h1{:align => "center"}
+          #number
