--- a/web/app/views/users/_form.html.haml
+++ b/web/app/views/users/_form.html.haml
@@ -1,30 +1,34 @@
 = form_with(model: user, local: true) do |form|
-  - if user.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(user.errors.count, "error")
-        prohibited this user from being saved:
-      %ul
-        - user.errors.full_messages.each do |message|
-          %li= message
-
   .row
     .content.col-md-4.col-md-offset-4
-      .panel.panel-primary{:align => "center"}
+      .panel.panel-primary
         .panel-heading
           .h1=@act
         .panel-body
+          - if user.errors.any?
+            .alert.alert-danger{:role => "alert"}
+              %ul
+                - user.errors.full_messages.each do |message|
+                  %li= message
+
           .field
-            = form.label :email
-            %br/
-            = form.email_field :email
+            .form-group
+              %label{:for => "exampleInputEmail1"} Email address
+              %input#exampleInputEmail1.form-control{"aria-describedby" => "emailHelp", :placeholder => "example@gmail.com", :type => "email", name: :'user[email]'}/
+              %small#emailHelp.form-text.text-muted We'll never share your email with anyone else.
           .field
-            = form.label :password
-            %br/
-            = form.password_field :password
+            .form-group
+              %label{:for => "exampleInputPassword1"} Password
+              %input#exampleInputPassword1.form-control{:placeholder => "Password", :type => "password", name: :'user[password]'}/
+
           .field
-            = form.label :password_confirmation
-            %br/
-            = form.password_field :password_confirmation
-          .actions
-            = form.submit
+            .form-group
+              %label{:for => "exampleInputPassword1"} Check password
+              %input#exampleInputPassword1.form-control{:placeholder => "Password", :type => "password", name: :'user[password_confirmation]'}/
+
+          -if @act == "New User"
+            .field{:align => "center"}
+              = button_to("Create", { action: "new" }, class: "btn btn-primary")
+          -else
+            .field{:align => "center"}
+              = button_to("Change", { action: "edit" }, class: "btn btn-primary")
