--- a/web/app/views/dashboard/_dates.html.haml
+++ b/web/app/views/dashboard/_dates.html.haml
@@ -1,9 +1,10 @@
-- m = ""
-- n = ""
-- @trackers.each do |tracker|
-  - m = tracker.created_at.strftime("%b  %e")
-  - if n != m
-    - n = m
-    %li
-      = link_to tracker.created_at.strftime("%b  %e"),
-                  dashboard_path(tracker)
+-if current_user
+  - m = ""
+  - n = ""
+  - @trackers.each do |tracker|
+    - m = tracker.created_at.strftime("%b  %e")
+    - if n != m
+      - n = m
+      %li
+        = link_to tracker.created_at.strftime("%b  %e"),
+                    dashboard_path(tracker)
