--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -11,7 +11,17 @@
       .content.col-md-12
         %nav.navbar.navbar-inverse
           .container-fluid
-            - if current_user
+            - if !current_user
+              %ul.nav.navbar-nav.col-md-10
+                %li
+                  = link_to "GPS Tracker",
+                    root_path(), method: :get
+              %ul.nav.navbar-nav.navbar-right.col-md-2
+                %li
+                  = link_to "Sign Up", new_guest_path
+                %li
+                  = link_to "Login", login_path
+            - elsif !current_user.admin
               %ul.nav.navbar-nav.col-md-10
                 %li
                   = link_to "GPS Tracker",
@@ -28,17 +38,26 @@
               %ul.nav.navbar-nav.navbar-right.col-md-2
                 %li
                   = link_to "Logout", :logout, method: :post
-                %li
-                  = link_to "All users", users_path
-
             - else
               %ul.nav.navbar-nav.col-md-10
                 %li
                   = link_to "GPS Tracker",
                     root_path(), method: :get
+                %li
+                  = link_to "All Users", admin_users_path
+                %li.dropdown
+                  %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+                    Tracks
+                    %span.caret
+                  %ul.dropdown-menu
+                    = render partial: "dashboard/dates"
+                %li
+                  = link_to "Edit Profile", edit_admin_path(current_user.id)
+
               %ul.nav.navbar-nav.navbar-right.col-md-2
                 %li
-                  = link_to "Sign Up", new_user_path
+                  = link_to "Logout", :logout, method: :post
                 %li
-                  = link_to "Login", login_path
+                  = link_to "New User", new_admin_path
+
     = yield
