--- a/web/app/views/users/index.html.haml
+++ b/web/app/views/users/index.html.haml
@@ -1,19 +1,5 @@
-%p#notice= notice
-%h1 Users
-
-%%table.table.table-striped
-  %thead
-    %tr
-      %th Email
-      %th Crypted password
-      %th Salt
-      %th{:colspan => "3"}
-  %tbody
-    - @users.each do |user|
-      %tr
-        %td= user.email
-        %td= user.crypted_password
-        %td= user.salt
-        %td= link_to 'Show', user
-        %td= link_to 'Edit', edit_user_path(user)
-        %td= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }
+#main-container.container-fluid{data: {way: @today.to_json}}
+  .row
+    .content.col-md-12
+      %h1{:align => "center"}
+        #number
