--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -18,7 +18,7 @@
                     root_path(), method: :get
               %ul.nav.navbar-nav.navbar-right.col-md-2
                 %li
-                  = link_to "Sign Up", new_guest_path
+                  = link_to "Sign Up", new_user_path
                 %li
                   = link_to "Login", login_path
             - elsif !current_user.admin
@@ -35,7 +35,7 @@
                   %li
                     = link_to "Edit Profile", edit_user_path(current_user.id)
 
-              %ul.nav.navbar-nav.navbar-right.col-md-2
+              %ul.nav.navbar-nav.navbar-right.col-md-1
                 %li
                   = link_to "Logout", :logout, method: :post
             - else
