--- a/web/app/views/users/_form.html.haml
+++ b/web/app/views/users/_form.html.haml
@@ -3,7 +3,7 @@
     .content.col-md-4.col-md-offset-4
       .panel.panel-primary
         .panel-heading
-          .h1=@act
+          .h1= current_user ? 'Change User' : 'Sign Up'
         .panel-body
           - if user.errors.any?
             .alert.alert-danger{:role => "alert"}
@@ -14,7 +14,10 @@
           .field
             .form-group
               %label{:for => "exampleInputEmail1"} Email address
-              %input#exampleInputEmail1.form-control{"aria-describedby" => "emailHelp", :placeholder => "example@gmail.com", :type => "email", name: :'user[email]'}/
+              - if current_user
+                %input#exampleInputEmail1.form-control{"aria-describedby" => "emailHelp", :placeholder => "example@gmail.com", :type => "email", name: :'user[email]', value: current_user.email}/
+              - else
+                %input#exampleInputEmail1.form-control{"aria-describedby" => "emailHelp", :placeholder => "example@gmail.com", :type => "email", name: :'user[email]'}/
               %small#emailHelp.form-text.text-muted We'll never share your email with anyone else.
           .field
             .form-group
