--- a/web/app/views/users/show.html.haml
+++ b/web/app/views/users/show.html.haml
@@ -1,4 +1,9 @@
 #main-container.container-fluid
+  - if flash[:notice]
+    .row
+      .content.col-md-4.col-md-offset-4
+        .jumbotron{align: "center"}
+          .notice= flash[:notice]
   .row
     .content.col-md-4.col-md-offset-4
       .panel.panel-primary{align: "center"}
@@ -13,6 +18,4 @@
             %p
               %strong Created at:
               = @user.created_at
-          .field
-            .notice= flash[:notice]
           = link_to "Edit", edit_user_path(@user), :class => "btn btn-primary"
