--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -14,18 +14,16 @@
             - if !current_user
               %ul.nav.navbar-nav.col-md-10
                 %li
-                  = link_to 'GPS Tracker',
-                    root_path(), method: :get
+                  = link_to 'GPS Tracker', root_path
               %ul.nav.navbar-nav.navbar-right.col-md-2
                 %li
-                  = link_to 'Sign Up', new_user_path
+                  = link_to 'Sign Up', new_profile_path
                 %li
                   = link_to 'Login', login_path
             - elsif !current_user.admin
               %ul.nav.navbar-nav.col-md-10
                 %li
-                  = link_to 'GPS Tracker',
-                    profile_index_path, method: :get
+                  = link_to 'GPS Tracker', root_path
                 %li.dropdown
                   %a.dropdown-toggle{'data-toggle': 'dropdown', href: '#'}
                     Tracks
@@ -33,27 +31,26 @@
                   %ul.dropdown-menu
                     = render partial: 'dashboard/dates'
                 %li
-                  = link_to 'My profile', profile_path(current_user.id)
+                  = link_to 'My profile', profile_path
                 %li
-                  = link_to 'Edit Profile', edit_user_path(current_user.id)
+                  = link_to 'Edit Profile', edit_profile_path
               %ul.nav.navbar-nav.navbar-right.col-md-1
                 %li
                   = link_to 'Logout', :logout, method: :post
             - else
               %ul.nav.navbar-nav.col-md-10
                 %li
-                  = link_to 'GPS Tracker',
-                    root_path(), method: :get
+                  = link_to 'GPS Tracker', root_path
                 %li
                   = link_to 'All Users', admin_users_path
                 %li
-                  = link_to 'Edit Profile', edit_user_path(current_user.id)
+                  = link_to 'Edit Profile', edit_profile_path
                 %li
-                  = link_to 'My profile', admin_path(current_user.id)
+                  = link_to 'My profile', admin_profile_path
 
               %ul.nav.navbar-nav.navbar-right.col-md-2
                 %li
-                  = link_to 'New User', new_user_path
+                  = link_to 'New User', new_profile_path
                 %li
                   = link_to 'Logout', :logout, method: :post
 
