--- a/web/app/views/admin/users/new.html.haml
+++ b/web/app/views/admin/users/new.html.haml
@@ -1,4 +1,4 @@
-= form_with(local: true, url: profile_path) do |form|
+= form_with(local: true, url: admin_users_path) do |form|
   .row
     .content.col-md-4.col-md-offset-4
       .panel.panel-primary
