--- a/web/app/views/guest/index.html.haml
+++ b/web/app/views/guest/index.html.haml
@@ -3,8 +3,9 @@
     .content.col-md-4.col-md-offset-4
       .jumbotron{align: "center"}
         .notice= flash[:notice]
-.row
-  .content.col-md-6.col-md-offset-3
-    .jumbotron
-      %h1{:align => "center"} GPS Tracker
-      %p{:align => "center"} This program helps you to track yourself.
+- else
+  .row
+    .content.col-md-6.col-md-offset-3
+      .jumbotron
+        %h1{:align => "center"} GPS Tracker
+        %p{:align => "center"} This program helps you to track yourself.
