--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
                   = link_to 'GPS Tracker', root_path
               %ul.nav.navbar-nav.navbar-right.col-md-2
                 %li
-                  = link_to 'Sign Up', new_profile_path
+                  = link_to 'Sign Up', new_registration_path
                 %li
                   = link_to 'Login', login_path
             - elsif !current_user.admin
@@ -31,8 +31,6 @@
                   %ul.dropdown-menu
                     = render partial: 'dashboard/dates'
                 %li
-                  = link_to 'My profile', profile_path
-                %li
                   = link_to 'Edit Profile', edit_profile_path
               %ul.nav.navbar-nav.navbar-right.col-md-1
                 %li
@@ -44,13 +42,11 @@
                 %li
                   = link_to 'All Users', admin_users_path
                 %li
-                  = link_to 'Edit Profile', edit_profile_path
-                %li
-                  = link_to 'My profile', admin_profile_path
+                  = link_to 'Edit Profile', edit_admin_profile_path
 
               %ul.nav.navbar-nav.navbar-right.col-md-2
                 %li
-                  = link_to 'New User', new_profile_path
+                  = link_to 'New User', new_admin_user_path
                 %li
                   = link_to 'Logout', :logout, method: :post
 
