--- a/web/app/views/profile/index.html.haml
+++ b/web/app/views/profile/index.html.haml
@@ -3,12 +3,16 @@
     .content.col-md-4.col-md-offset-4
       .jumbotron{align: 'center'}
         .notice= flash[:notice]
-.row
-  .content.col-md-6.col-md-offset-3
-    .jumbotron
-      %h1{align: 'center'} GPS Tracker
-      %p{align: 'center'} Welcome back to our cool web-site!
-.row
-  .content.col-md-12
-    %h1{align: 'center'}
-      #number
+- else
+  .row
+    .content.col-md-6.col-md-offset-3
+      .jumbotron{align: 'center'}
+        %h1 GPS Tracker
+        %p Welcome back to our cool web-site!
+        %h3='Email: ' + current_user.email
+        %h3='Here since:'
+        %h3=current_user.created_at.day.to_s + ':' + current_user.created_at.month.to_s + ':' + current_user.created_at.year.to_s
+  .row
+    .content.col-md-12
+      %h1{align: 'center'}
+        #number
