fixed small mistakes

--- a/web/app/views/admin/profile/edit.html.haml
+++ b/web/app/views/admin/profile/edit.html.haml
@@ -1,4 +1,4 @@
-= form_for(current_user, url: admin_profile_url) do |form|
+= form_for(current_user, url: admin_profile_path) do |form|
   .row
     .content.col-md-4.col-md-offset-4
       .panel.panel-primary
