--- a/web/app/views/password_reset/new.html.haml
+++ b/web/app/views/password_reset/new.html.haml
@@ -1,4 +1,4 @@
-= form_tag password_reset_index_path, :method => :post do
+= form_tag password_reset_path, :method => :post do
   .row
     .content.col-md-4.col-md-offset-4
       .panel.panel-primary
