--- a/web/app/views/dashboard/_dates.html.haml
+++ b/web/app/views/dashboard/_dates.html.haml
@@ -7,4 +7,4 @@
       - n = m
       %li
         = link_to tracker.created_at.strftime('%b  %e'),
-                    dashboard_path(tracker)
+                    dashboard_path(id: tracker)
