--- a/web/app/views/dashboard/show.html.haml
+++ b/web/app/views/dashboard/show.html.haml
@@ -10,15 +10,18 @@
         .jumbotron{align: 'center'}
           .notice= flash[:notice]
   - else
-    .row
-      .content.col-md-6.col-md-offset-3
-        .jumbotron{align: 'center'}
-          %h1 GPS Tracker
-          %p Welcome back to our cool web-site!
-          %h3= "Email: #{current_user.email}"
-          %h3= 'Here since:'
-          %h3= "#{current_user.created_at.day.to_s}:#{current_user.created_at.month.to_s}:#{current_user.created_at.year.to_s}"
-    .row
-      .content.col-md-12
-        %h1{align: 'center'}
-          #number
+    #main-container.container-fluid{data: {way: @today.to_json}}
+      .row
+        .content.col-md-6.col-md-offset-3
+          .jumbotron{align: 'center'}
+            %h1 GPS Tracker
+            %p Welcome back to our cool web-site!
+            %hr.my-1/
+            %h3= "Email: #{current_user.email}"
+            %h3= "Here since: #{current_user.created_at.day.to_s}-#{current_user.created_at.month.to_s}-#{current_user.created_at.year.to_s}"
+            %h3= "Your token: #{current_user.tracker_token}"
+            = link_to '(generate new token)', profile_generate_token_path
+      .row
+        .content.col-md-12
+          %h1{align: 'center'}
+            #number
