added photoes and friends

--- a/web/app/views/admin/users/index.html.haml
+++ b/web/app/views/admin/users/index.html.haml
@@ -6,7 +6,7 @@
       .jumbotron{align: 'center'}
         .notice= flash[:notice]
 
-%%table.table.table-striped
+%table.table.table-striped
   %thead
     %tr
       %th Email
