--- a/web/app/views/dashboard/show.html.haml
+++ b/web/app/views/dashboard/show.html.haml
@@ -1,4 +1,4 @@
-- if params[:id].present?
+- if params[:date].present?
   #main-container.container-fluid{data: {list: @paths.to_json}}
   %script{async: '', defer: 'defer',
     :src => "https://maps.googleapis.com/maps/api/js?key=AIzaSyBBJehlZdShzoTdNZUNrMncq9G4kK8y7cw&callback=initMap"}
@@ -12,16 +12,20 @@
   - else
     #main-container.container-fluid{data: {way: @today.to_json}}
       .row
-        .content.col-md-6.col-md-offset-3
+        .content.col-md-4
           .jumbotron{align: 'center'}
-            %h1 GPS Tracker
-            %p Welcome back to our cool web-site!
+            = image_tag (current_user.image.medium.url)
+            .p{style: 'margin-top: 15px;'}
+              = link_to 'My Calendar', calendar_path, {class: 'button'}
+
             %hr.my-1/
             %h3= "Email: #{current_user.email}"
             %h3= "Here since: #{current_user.created_at.day.to_s}-#{current_user.created_at.month.to_s}-#{current_user.created_at.year.to_s}"
             %h3= "Your token: #{current_user.tracker_token}"
             = link_to '(generate new token)', profile_generate_token_path
-      .row
-        .content.col-md-12
+        .content.col-md-8
+          .jumbotron{align: 'center'}
+            %h1 GPS Tracker
+            %p Welcome back to our cool web-site!
           %h1{align: 'center'}
             #number
