--- a/web/app/assets/stylesheets/scaffolds.scss
+++ b/web/app/assets/stylesheets/scaffolds.scss
@@ -19,6 +19,43 @@ pre {
   font-size: 11px;
 }
 
+.round-image-50 {
+    background-color: white;
+    border: 1px solid #d9d9d9;
+    border-radius: 25px;
+    -moz-border-radius: 25px;
+    -webkit-border-radius: 25px;
+    height: 50px;
+    width: 50px;
+    overflow: hidden;
+    text-align: center;
+    img { width: 100% }
+}
+
+.button {
+    display: block;
+    width: 215px;
+    height: 35px;
+    background: #4E9CAF;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    color: black;
+    font-weight: bold;
+}
+
+.button:hover{
+  display: block;
+  width: 215px;
+  height: 35px;
+  background: #4E9CAF;
+  padding: 10px;
+  text-align: center;
+  border-radius: 5px;
+  color: black;
+  font-weight: bold;
+}
+
 a {
   color: #000;
 
