--- a/web/app/views/calendar/index.html.haml
+++ b/web/app/views/calendar/index.html.haml
@@ -1,16 +1,15 @@
 .row
   .content.col-md-6.col-md-offset-3
-    .month{style: "background:#{@color}"}
+    .month{style: "background: #{@calendar_service.current_month_color}"}
       %ul
-        - if @diff > 0
-          %li.prev
-            = link_to '❮', calendar_path(date: @diff - 1)
+        %li.prev
+          = link_to '❮', calendar_path(date: @calendar_service.prev_month_start_date)
         %li.next
-          = link_to '❯', calendar_path(date: @diff + 1)
+          = link_to '❯', calendar_path(date: @calendar_service.next_month_start_date)
         %li
-          = @month
+          = @calendar_service.current_date.strftime('%B')
           %br/
-          %span{:style => "font-size:18px"}= @year
+          %span{style: 'font-size: 18px;'}= @calendar_service.current_date.year
     %ul.weekdays
       %li Mo
       %li Tu
@@ -20,13 +19,13 @@
       %li Sa
       %li Su
     %ul.days
-      - for i in 0..(@state.wday - 2)
+      - (@calendar_service.current_month_dates.first.cwday-1).times do
         %li
 
-      - for i in 1..(@last)
-        - if @ids[i]
+      - @calendar_service.current_month_dates.in_groups_of(7, false).each do |week|
+        - week.each do |date|
           %li
-            %span.active
-              = link_to i, dashboard_path(id: @ids[i])
-        - else
-          %li= i
+            - if @calendar_service.dates_w_tracking_data.include?(date)
+              %span.active= link_to date.day, dashboard_path(date: date)
+            - else
+              = date.day
