--- a/web/app/views/profile/edit.html.haml
+++ b/web/app/views/profile/edit.html.haml
@@ -1,4 +1,4 @@
-= form_with(local: true, url: profile_path, method: :put) do |form|
+= form_with(local: true, url: profile_path, method: :put,  html: { multipart: true }) do |form|
   .row
     .content.col-md-4.col-md-offset-4
       .panel.panel-primary
@@ -14,15 +14,19 @@
             .form-group
               .h2{align: 'center'}
                 %i=current_user.email
+
+          .field
+            = form.label :image
+            %br/
+            = form.file_field :image
           .field
             .form-group
               %label{for: 'exampleInputPassword1'} Password
-              %input#inputPassword1.form-control{placeholder: 'Password', type: 'password', name: 'user[password]'}/
-
+              %input#inputPassword1.form-control{placeholder: 'Password', type: 'password', name: 'user[password]'}
           .field
             .form-group
               %label{for: 'exampleInputPassword2'} Confirm password
-              %input#inputPassword2.form-control{placeholder: 'Password', type: 'password', name: 'user[password_confirmation]'}/
+              %input#inputPassword2.form-control{placeholder: 'Password', type: 'password', name: 'user[password_confirmation]'}
 
           .field{align: 'center'}
             =form.submit 'Change', class: 'btn btn-primary'
