--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -25,6 +25,8 @@
                 %li
                   = link_to 'GPS Tracker', root_path
                 %li
+                  = link_to 'Calendar', calendar_path
+                %li
                   = link_to 'Edit Profile', edit_profile_path
                 %li
                   = link_to 'Friends', friends_path
