--- a/web/app/views/dashboard/show.html.haml
+++ b/web/app/views/dashboard/show.html.haml
@@ -3,7 +3,7 @@
   %script{async: '', defer: 'defer',
     :src => "https://maps.googleapis.com/maps/api/js?key=AIzaSyBBJehlZdShzoTdNZUNrMncq9G4kK8y7cw&callback=initMap"}
   .row
-    .content.col-md-5.col-md-offset-1
+    .content.col-md-6.col-md-offset-1
       %h1
         ="#{@from.day} #{@from.strftime("%B")} #{@from.year}"
       %table.table.table-striped.table-bordered
@@ -16,10 +16,15 @@
           - for i in @paths.first.group..@paths.last.group
             %tr
               - if @paths.last.group == -1
-                %td= "Current"
+                %td
+                  = link_to "Current", change_name_api_tracker_path(@paths.first.id), remote: true
               - else
-                %td= "Group #{i - @paths.first.group + 1}"
-
+                %td
+                  .row
+                    .hover_text.col-md-9
+                      Group #{i - @paths.first.group + 1}
+                    .cartouche.col-md-3
+                      %span.glyphicon.glyphicon-pencil
               %td= @paths.where(group: i).first.created_at
               %td= @paths.where(group: i).last.created_at
 
