--- a/web/app/views/dashboard/show.html.haml
+++ b/web/app/views/dashboard/show.html.haml
@@ -2,8 +2,40 @@
   #main-container.container-fluid{data: {list: @paths.to_json}}
   %script{async: '', defer: 'defer',
     :src => "https://maps.googleapis.com/maps/api/js?key=AIzaSyBBJehlZdShzoTdNZUNrMncq9G4kK8y7cw&callback=initMap"}
+  %script{:src => "https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"}
+  :javascript
+    $(document).ready(function(){
+      number = 0;
+      id = 0;
+      $(document).on('click', '.cartouche', function(e) {
+        number = $(this).data('mydata');
+        element = document.getElementById(number);
+        $(element).hide();
+        element = document.getElementById("inp-" + number);
+        $(element).show();
+        id = $(this).data('track');
+      });
+
+      $(document).on('click', 'button1', function(e) {
+        $.post("/api/tracker/" + id + "/change_group",
+        {
+            group_name: document.getElementById('input_name').value
+        });
+        element = document.getElementById("inp-" + number);
+        $(element).hide();
+        element = document.getElementById(number);
+        $(element).show();
+      });
+
+      $(document).on('click', 'button2', function(e) {
+        element = document.getElementById("inp-" + number);
+        $(element).hide();
+        element = document.getElementById(number);
+        $(element).show();
+      });
+    });
   .row
-    .content.col-md-6.col-md-offset-1
+    .content.col-md-5.col-md-offset-1
       %h1
         ="#{@from.day} #{@from.strftime("%B")} #{@from.year}"
       %table.table.table-striped.table-bordered
@@ -20,11 +52,20 @@
                   = link_to "Current", change_name_api_tracker_path(@paths.first.id), remote: true
               - else
                 %td
-                  .row
-                    .hover_text.col-md-9
+                  .input_window{id: "inp-#{i}"}
+                    .form-group
+                      %input.form-control{placeholder: 'Forest walk', id: 'input_name'}
+                    %button1.btn.btn-success.glyphicon.glyphicon-ok{:type => "button"}
+                    %button2.btn.btn-danger.glyphicon.glyphicon-remove{:type => "button"}
+                  .hover_text{id: "#{i}"}
+                    - if @paths.first.custom_name == nil
                       Group #{i - @paths.first.group + 1}
-                    .cartouche.col-md-3
-                      %span.glyphicon.glyphicon-pencil
+                    - else
+                      =@paths.first.custom_name
+                    .wrapper_cart
+                      .cartouche{data: {'mydata': "#{i}", 'track': "#{@paths.where(group: i).first.id}"}}
+                        %span
+                          .glyphicon.glyphicon-pencil
               %td= @paths.where(group: i).first.created_at
               %td= @paths.where(group: i).last.created_at
 
