--- a/web/app/views/api/tracker/change_group.js.erb
+++ b/web/app/views/api/tracker/change_group.js.erb
@@ -1,2 +1,3 @@
-$('#' + '<%= @tracker.group %>').html('<%= @tracker.group_name %>');
+$('#group-<%= @tracker.id %>').html('<%= j(render(partial: 'dashboard/table', locals: {i: i})) %>');
+$('#' + '<%= @tracker.group %>').html('<%= @tracker.custom_name %>');
 alert(1);
