--- a/web/app/views/dashboard/_table.html.haml
+++ b/web/app/views/dashboard/_table.html.haml
@@ -1,7 +1,7 @@
-%tr{id: "#group-#{@paths.where(group: i).first.id}"}
-  - if @paths.last.group == -1
+%tr{id: "#group-#{paths.where(group: i).first.id}"}
+  - if paths.last.group == -1
     %td
-      = link_to "Current", change_name_api_tracker_path(@paths.first.id), remote: true
+      = link_to "Current", change_name_api_tracker_path(paths.first.id), remote: true
   - else
     %td
       .input_window{id: "inp-#{i}"}
@@ -10,13 +10,13 @@
         %button.button1.btn.btn-success.glyphicon.glyphicon-ok
         %button.button2.btn.btn-danger.glyphicon.glyphicon-remove
       .hover_text{id: "#{i}"}
-        - if @paths.where(group: i).first.custom_name == nil || @paths.where(group: i).first.custom_name == ""
-          Group #{i - @paths.first.group + 1}
+        - if paths.where(id: i).first.custom_name == nil || paths.where(id: i).first.custom_name == ""
+          Group #{i - paths.first.group + 1}
         - else
-          =@paths.where(group: i).first.custom_name
+          =paths.where(id: i).first.custom_name
         .wrapper_cart
-          .cartouche{data: {'mydata': "#{i}", 'track': "#{@paths.where(group: i).first.id}"}}
+          .cartouche{data: {'mydata': "#{i}", 'track': "#{paths.where(group: i).first.id}"}}
             %span
               .glyphicon.glyphicon-pencil
-  %td= @paths.where(group: i).first.created_at
-  %td= @paths.where(group: i).last.created_at
+  %td= paths.where(group: i).first.created_at
+  %td= paths.where(group: i).last.created_at
